TIKA-4128 -- bump to Java 11